--- a/client/src/app/component/ft-table.component.less
+++ b/client/src/app/component/ft-table.component.less
@@ -5,7 +5,7 @@ td {
     text-overflow: ellipsis;
 }
 
-[formcontrolname] {
+[formcontrolname], .ui-inputtext {
     height: 33px;
     display: inline-block;
     width: 100%;
