--- a/client/src/app/admin/admin.component.html
+++ b/client/src/app/admin/admin.component.html
@@ -44,8 +44,12 @@
       </ul>
     </div>
     <div class="main">
-      <ft-table moreDetails="true" sortField="last" [columns]="cols" [data]="users" [noData]="Locales.noData"
-        (onNotify)="eventTableHandler($event)" [expandFormTemplate]="tableExpandForm"></ft-table>
+      <ft-table sortField="last" [columns]="cols" [data]="users" [expandFormTemplate]="tableExpandForm" (onNotify)="eventTableHandler($event)">
+        <ng-template pTemplate="lastColumn" let-rowData="$implicit">
+          <button pButton icon="pi pi-id-card" (click)="onMoreDetails(rowData)" [title]="Locales.moreDetails"></button>
+        </ng-template>
+      </ft-table>
+      <p-confirmDialog key="confirmDialog" [header]="Locales.deleteHeader" [message]="Locales.deleteRecord" icon="pi pi-exclamation-triangle"></p-confirmDialog>
     </div>
   </div>
   <app-footer></app-footer>
