--- a/client/src/app/admin/admin.component.html
+++ b/client/src/app/admin/admin.component.html
@@ -45,7 +45,7 @@
     </div>
     <div class="main">
       <ft-table sortField="last" [columns]="cols" [data]="users" [expandFormTemplate]="tableExpandForm" (onNotify)="eventTableHandler($event)">
-        <ng-template pTemplate="lastColumn" let-rowData="$implicit">
+        <ng-template pTemplate="lastColumn" let-rowData="$implicit" *ngIf="AppUtils.isEditorAccess()">
           <button pButton icon="pi pi-id-card" (click)="onMoreDetails(rowData)" [title]="Locales.moreDetails"></button>
         </ng-template>
       </ft-table>
