--- a/client/src/app/admin/userform.component.html
+++ b/client/src/app/admin/userform.component.html
@@ -65,14 +65,25 @@
       <input class="ui-inputtext" formControlName="whoModified" />
     </div>
     <div class="p-md-2">
-      <p-checkbox [label]="Locales.isActive" binary="true" formControlName="isActive"></p-checkbox>
+      <p-checkbox [label]="getLabel('isMemeber')" binary="true" formControlName="isMemeber"></p-checkbox>
     </div>
     <div class="p-md-2">
-      <p-checkbox [label]="Locales.resetPassword" binary="true" formControlName="resetPassword">
+      <p-checkbox [label]="getLabel('isActive')" binary="true" formControlName="isActive"></p-checkbox>
+    </div>
+    <div class="p-md-2">
+      <p-checkbox [label]="getLabel('resetPassword')" binary="true" formControlName="resetPassword">
       </p-checkbox>
     </div>
     <div class="p-md-2">
-      <p-checkbox [label]="Locales.schoolEmployee" binary="true" formControlName="isSchoolEmployee">
+      <p-checkbox [label]="getLabel('isCitizen')" binary="true" formControlName="isCitizen">
+      </p-checkbox>
+    </div>
+    <div class="p-md-2">
+      <p-checkbox [label]="getLabel('englishProficient')" binary="true" formControlName="englishProficient">
+      </p-checkbox>
+    </div>
+    <div class="p-md-2">
+      <p-checkbox [label]="getLabel('schoolEmployee')" binary="true" formControlName="isSchoolEmployee">
       </p-checkbox>
     </div>
   </div>
