--- a/client/src/assets/less/layout.less
+++ b/client/src/assets/less/layout.less
@@ -12,32 +12,38 @@
     .p-md-3,
     .p-md-4,
     .p-md-5,
-    .p-md-6 {
+    .p-md-6,
+    .p-md-12 {
         -ms-flex: 0 0 auto;
-        flex: 0 0 auto
+        flex: 0 0 auto;
+        display: inline-block;
     }
 
     .p-md-1 {
-        width: 8.3333%
+        width: 8.3333%;
     }
 
     .p-md-2 {
-        width: 16.6667%
+        width: 16.6667%;
     }
 
     .p-md-3 {
-        width: 25%
+        width: 25%;
     }
 
     .p-md-4 {
-        width: 33.3333%
+        width: 33.3333%;
     }
 
     .p-md-5 {
-        width: 41.6667%
+        width: 41.6667%;
     }
 
     .p-md-6 {
-        width: 50%
+        width: 50%;
+    }
+
+    .p-md-12 {
+        width: 100%;
     }
 }
