--- a/client/src/app/component/ft-table.component.less
+++ b/client/src/app/component/ft-table.component.less
@@ -1,8 +1,14 @@
 @import '../../assets/less/layout.less';
 
-td {
+td, th {
     overflow: hidden;
     text-overflow: ellipsis;
+}
+
+th {
+    white-space: nowrap;
+    font-size: 12px;
+    padding: 0.571em 0.2em !important;
 }
 
 [formcontrolname], .ui-inputtext {
