--- a/client/src/assets/less/styles.less
+++ b/client/src/assets/less/styles.less
@@ -68,6 +68,12 @@ a {
     box-shadow: 0 0 3px #f00;
 }
 
+.td-controls .ui-calendar, .td-controls .ui-inputtext {
+    height: 33px;
+    display: inline-block;
+    width: 100%;
+}
+
 .container {
     overflow-y: auto;
     position: relative;
