--- a/client/src/assets/less/layout.less
+++ b/client/src/assets/less/layout.less
@@ -6,6 +6,15 @@
     margin-left: 10px;
 }
 
+input[readonly] {
+    background: #eee !important;
+}
+
+.ellipsis {
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
 @media screen and (min-width: 768px) {
     .p-md-1,
     .p-md-2,
