--- a/client/src/app/component/ft-table.component.less
+++ b/client/src/app/component/ft-table.component.less
@@ -16,6 +16,11 @@ th {
     padding: 0.571em 0.2em !important;
 }
 
+.td-controls .ui-calendar, .td-controls .ui-inputtext {
+    height: 33px;
+    display: inline-block;
+    width: 100%;
+}
 
 .p-form {
     margin: 5px 0;
