--- a/client/src/assets/less/styles.less
+++ b/client/src/assets/less/styles.less
@@ -18,6 +18,17 @@ body {
     background-color: #f4f3f8;
 }
 
+body .ui-datepicker-buttonbar .ui-button.ui-state-default.ui-button-secondary {
+    background-color: transparent;
+    border-color: transparent;
+    color: #2196F3;
+}
+
+.nowrap-tooltip {
+    max-width: 100% !important;
+    white-space: nowrap;
+}
+
 app-toast {
     position: fixed;
     top: 20px;
@@ -66,12 +77,6 @@ a {
     -moz-box-shadow: 0 0 3px #f00;
     -webkit-box-shadow: 0 0 3px #f00;
     box-shadow: 0 0 3px #f00;
-}
-
-.td-controls .ui-calendar, .td-controls .ui-inputtext {
-    height: 33px;
-    display: inline-block;
-    width: 100%;
 }
 
 .container {
