--- a/client/src/app/component/ft-table.component.html
+++ b/client/src/app/component/ft-table.component.html
@@ -1,11 +1,13 @@
 <div class="filter-wrap">
-  <p-overlayPanel #op appendTo="body" [showCloseIcon]="true" [style]="{width: '700px'}" [dismissable]="false">
-      <h3 style="display: inline;">{{Locales.filter}}</h3>
+  <p-overlayPanel #op appendTo="body" [showCloseIcon]="true" [style]="{width: '600px'}" [dismissable]="false">
+      <h3 style="display: inline;">{{Locales.filter}} <span class="pi pi-info-circle" style="color: #007ad9" [escape]="false" tooltipStyleClass="nowrap-tooltip"
+          pTooltip="% - Represents zero, one, or multiple characters<br>_ - Represents a single character"></span>
+      </h3>
       <div class="right">
-        <a (click)="resetFilter()">{{Locales.clearAll}}</a>
+        <a (click)="clearFilter()">{{Locales.clearAll}}</a>
       </div>
       <ng-template pTemplate>
-        <form [formGroup]="filterGroup" class="p-form">
+        <form [formGroup]="filterGroup" class="p-form ui-fluid">
           <p-table [value]="getColumns(true)" [rows]="8" [scrollable]="true" scrollHeight="300px">
             <ng-template pTemplate="header">
                 <tr>
@@ -17,26 +19,29 @@
             <ng-template pTemplate="body" let-rowData>
                 <tr>
                     <td width="40">
-                      <input type="checkbox" [checked]="isShow(rowData)" [name]="rowData.field"/>
+                      <p-checkbox binary="true" [formControlName]="rowData.field + '_show'"></p-checkbox>
                     </td>  
                     <td width="200">{{rowData.header}}</td>
                     <td style="padding: 0.5em;" class="td-controls">
-                      <p-dropdown *ngIf="rowData.type=='popup'" appendTo="body" [options]="rowData.value" [formControlName]="rowData.field"></p-dropdown>
                       <input *ngIf="rowData.type=='input'" class="ui-inputtext" [formControlName]="rowData.field"/>
-                      <p-calendar *ngIf="rowData.type=='cal'" [monthNavigator]="true" [yearNavigator]="true" [yearRange]="yearRange" showButtonBar="true" appendTo="body" [formControlName]="rowData.field"></p-calendar>
+                      <p-dropdown *ngIf="rowData.type=='popup'" appendTo="body" [options]="rowData.value" [formControlName]="rowData.field"></p-dropdown>
+                      <p-checkbox *ngIf="rowData.type=='check'" binary="true" [formControlName]="rowData.field"></p-checkbox>
+                      <p-calendar *ngIf="rowData.type=='cal'" [monthNavigator]="true" [yearNavigator]="true" [yearRange]="yearRange" showButtonBar="true" showIcon="true" selectionMode="range" appendTo="body" [formControlName]="rowData.field"></p-calendar>
                     </td>
                 </tr>
             </ng-template>
           </p-table>
-          <input type="checkbox" style="margin: 20px 5px 0 0;" #saveFilter/>{{Locales.save}}
+          <span style="padding-top: 10px; display: inline-block;">
+            <p-checkbox [label]="Locales.save" binary="true" formControlName="_saveFilter"></p-checkbox>
+          </span>
           <div class="right" style="margin: 10px 0;">
-            <p-button label="{{Locales.apply}}"></p-button>
-            <p-button label="{{Locales.cancel}}"></p-button>
+            <p-button label="{{Locales.apply}}" (click)="applyFilter(); op.onCloseClick($event)"></p-button>
+            <p-button label="{{Locales.cancel}}" (click)="op.onCloseClick($event)"></p-button>
           </div>
         </form>
       </ng-template>
   </p-overlayPanel>
-  <button pButton icon="pi pi-filter" style="font-size: 12px; border-radius: 50%;" (click)="op.toggle($event)"></button>
+  <button pButton icon="pi pi-filter" style="font-size: 12px; border-radius: 50%;" (click)="resetFilter(); op.toggle($event)"></button>
   <div style="position: absolute; right: 5px;">
     {{Locales.itemsPerPage}}
     <p-dropdown [options]="itemsPerPageList" (onChange)="itemsPerPageChanged()"
