--- a/client/src/app/component/ft-table.component.less
+++ b/client/src/app/component/ft-table.component.less
@@ -3,7 +3,7 @@
 .filter-wrap {
     height: 40px;
     margin-bottom: 4px;
-    background: #eee;
+    background: #f3c8c8;
     padding: 0 13px;
     display: flex;
     align-items: center;
