--- a/client/src/app/aircraft/aircraft.component.html
+++ b/client/src/app/aircraft/aircraft.component.html
@@ -3,11 +3,10 @@
     <div class="topbar-left">
       <app-header></app-header>
     </div>
-    <div class="topbar-right">RIGHT</div>
   </div>
   <div class="wrap">
     <div class="left-menu">
-      <ft-leftnav link="dashboard"></ft-leftnav>
+      <ft-leftnav link="aircrafts"></ft-leftnav>
     </div>
     <div class="main">
 
