--- a/client/src/app/authentication/auth.component.html
+++ b/client/src/app/authentication/auth.component.html
@@ -1,8 +1,7 @@
 <div class="container">
     <div class="topbar">
         <div class="topbar-left">
-            <h3>{{company}}</h3>
-            <h4>{{phone}}</h4>
+            <app-header [showArrow]="false"></app-header>
         </div>
     </div>
     <div class="wrap">
