--- a/client/src/assets/less/styles.less
+++ b/client/src/assets/less/styles.less
@@ -49,6 +49,11 @@ a {
     color: red;
 }
 
+body .ui-table-hoverable-rows .ui-table-tbody > tr:hover {
+    background: #d5edff;
+    color: #495057;
+}
+
 .p-grid {
     display: -ms-flexbox;
     display: flex;
@@ -77,6 +82,17 @@ a {
     -moz-box-shadow: 0 0 3px #f00;
     -webkit-box-shadow: 0 0 3px #f00;
     box-shadow: 0 0 3px #f00;
+}
+
+.layout-mask {
+    display: none;
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background-color: #424242;
+    opacity: 0.7;
+    top: 0;
+    left: 0;
 }
 
 .container {
